# study_elixir

./: README.md
control_syntax/: main.exs
hello_world/: README.md
meta_programming/: README.md  main.exs
mix_and_hex/: README.md  mix.exs
mix_and_hex/lib/: mix_and_hex.ex
mix_and_hex/test/: mix_and_hex_test.exs
module/: README.md  main.exs
module_and_function/: README.md
nifs/: CMakeLists.txt  README.md  main.exs
nifs/src/: fast_compare.c
other/: README.md  main.exs
pattern_match/: README.md  main.exs
phoenix_test/: README.md  mix.exs
phoenix_test/config/: config.exs  dev.exs  test.exs
phoenix_test/lib/phoenix_test/: endpoint.ex
phoenix_test/priv/repo/migrations/: 20151009002249_create_user.exs
phoenix_test/test/controllers/: user_controller_test.exs
phoenix_test/test/models/: user_test.exs
phoenix_test/test/support/: model_case.ex
phoenix_test/web/: router.ex  web.ex
phoenix_test/web/controllers/: user_controller.ex
phoenix_test/web/models/: user.ex
phoenix_test/web/views/: user_view.ex
process/: README.md  main.exs
types/: README.md  main.exs
